Anonymous | Login | 2021-01-17 00:14 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031020 | Community | [OCCT] OCCT:Coding | public | 2019-10-01 19:21 | 2020-12-02 17:12 | ||||
Reporter | sraymond | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031020: Coding - invalid inline usage in BRepBlend_AppSurface | ||||||||
Description | In file BRepBlend_AppSurface.cxx the implementation uses the keyword inline: inline void BRepBlend_AppSurface::TolReached (Standard_Real& Tol3d, Standard_Real& Tol2d) const { Tol3d = approx.MaxErrorOnSurf(); Tol2d = 0; for (Standard_Integer ii=1; ii<=approx.NbCurves2d(); ii++) { Tol2d = Max(Tol2d, approx.Max2dError(ii)); } } Causing undefined symbol import error I guess it comes from copy/paste error form BRepBlend_AppSurface.lxx Please consider removing inline declaration or move back the method BRepBlend_AppSurface::TolReached back to BRepBlend_AppSurface.lxx | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|
(0087675) git (administrator) 2019-10-01 23:07 |
Branch CR31020 has been created by msv. SHA-1: ed5e72c58e4ae0f773474c8710b02e7da2a92f7b Detailed log of new commits: Author: msv Date: Tue Oct 1 23:06:35 2019 +0300 0031020: invalid inline usage in BRepBlend_AppSurface BRepBlend_AppSurface and some other classes have been corrected to avoid inlining member functions in .cxx code. |
(0087676) msv (developer) 2019-10-01 23:11 |
Please review. http://jenkins-test-12.nnov.opencascade.com/view/CR31020-MSV/view/COMPARE/ [^] |
(0087677) kgv (developer) 2019-10-01 23:13 |
- inline void Nullify (); + inline void Nullify () "inline" looks redundant here. |
(0087678) git (administrator) 2019-10-01 23:17 |
Branch CR31020 has been updated forcibly by kgv. SHA-1: bb9fce1dd28876170a0150708303801748eadbbd |
(0087844) apn (administrator) 2019-10-04 20:25 |
Combination - OCCT branch : CR31020 master SHA - ed5e72c58e4ae0f773474c8710b02e7da2a92f7b 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - 83df4cb7aa05ca0b1f190a68462fc970ee162d17 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16811.49999999996 / 16862.21000000009 [-0.30%] Products Total CPU difference: 10514.920000000038 / 10559.290000000046 [-0.42%] Windows-64-VC14: OCCT Total CPU difference: 18323.109375 / 18333.171875 [-0.05%] Products Total CPU difference: 12505.421875 / 12537.390625 [-0.25%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0088472) git (administrator) 2019-10-23 11:51 |
Branch CR31020 has been deleted by kgv. SHA-1: bb9fce1dd28876170a0150708303801748eadbbd |
![]() |
|||
occt: master 746cb7c3
Timestamp: 2019-10-01 20:06:35 Author: msv Committer: apn [ Details ] [ Diff ] |
0031020: Coding - invalid inline usage in BRepBlend_AppSurface BRepBlend_AppSurface and some other classes have been corrected to avoid inlining member functions in .cxx code. |
||
mod - src/BRepBlend/BRepBlend_AppSurface.cxx | [ Diff ] [ File ] | ||
mod - src/BRepMesh/BRepMesh_Delaun.cxx | [ Diff ] [ File ] | ||
mod - src/MeshVS/MeshVS_DummySensitiveEntity.cxx | [ Diff ] [ File ] | ||
mod - src/NCollection/NCollection_BaseSequence.cxx | [ Diff ] [ File ] | ||
mod - src/NCollection/NCollection_BaseSequence.hxx | [ Diff ] [ File ] | ||
mod - src/ShapeFix/ShapeFix_Edge.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-10-01 19:21 | sraymond | New Issue | |
2019-10-01 19:21 | sraymond | Assigned To | => msv |
2019-10-01 23:07 | git | Note Added: 0087675 | |
2019-10-01 23:07 | msv | Status | new => assigned |
2019-10-01 23:11 | msv | Note Added: 0087676 | |
2019-10-01 23:11 | msv | Assigned To | msv => kgv |
2019-10-01 23:11 | msv | Status | assigned => resolved |
2019-10-01 23:11 | msv | Steps to Reproduce Updated | View Revisions |
2019-10-01 23:13 | kgv | Note Added: 0087677 | |
2019-10-01 23:14 | kgv | Category | OCCT:Modeling Algorithms => OCCT:Coding |
2019-10-01 23:14 | kgv | Summary | invalid inline usage in BRepBlend_AppSurface => Coding - invalid inline usage in BRepBlend_AppSurface |
2019-10-01 23:17 | git | Note Added: 0087678 | |
2019-10-01 23:17 | kgv | Assigned To | kgv => bugmaster |
2019-10-01 23:17 | kgv | Status | resolved => reviewed |
2019-10-04 20:25 | apn | Test case number | => Not needed |
2019-10-04 20:25 | apn | Note Added: 0087844 | |
2019-10-04 20:25 | apn | Status | reviewed => tested |
2019-10-23 01:07 | apn | Changeset attached | => occt master 746cb7c3 |
2019-10-23 01:07 | apn | Assigned To | bugmaster => apn |
2019-10-23 01:07 | apn | Status | tested => verified |
2019-10-23 01:07 | apn | Resolution | open => fixed |
2019-10-23 11:51 | git | Note Added: 0088472 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |