src/BRepBlend/BRepBlend_AppSurface.cxx
@@ -126,8 +126,8 @@ Standard_Real BRepBlend_AppSurface::TolCurveOnSurf(const Standard_Integer Index)
   return approx.TolCurveOnSurf(Index);
 }
 
-inline void  BRepBlend_AppSurface::TolReached (Standard_Real& Tol3d,
-					 Standard_Real& Tol2d) const
+void  BRepBlend_AppSurface::TolReached (Standard_Real& Tol3d,
+                                        Standard_Real& Tol2d) const
 {
   Tol3d = approx.MaxErrorOnSurf();
   Tol2d = 0;
